[gd_scene load_steps=3 format=3 uid="uid://nrurw6h4saca"]

[ext_resource type="Script" path="res://ui/main_menu_component.gd" id="1_5xvdm"]

[sub_resource type="LabelSettings" id="LabelSettings_3xrhc"]
font_size = 64
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5xvdm")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Title" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Memories Of Melody"
label_settings = SubResource("LabelSettings_3xrhc")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Player"

[node name="OptionsButton" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="ExitButton" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_pressed"]
